Added Portal Class and Verified the clouds bugs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,11 +25,12 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
 
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -88,4 +89,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonPlayerController",NewClassName="GEII_Project1PlayerController")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="GEII_Project1GameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="GEII_Project1Character")
+NearClipPlane=10.000000
 
